--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
     <maven.compiler.release>21</maven.compiler.release>
-    <gravitee-inference.version>1.0.0</gravitee-inference.version>
-    <gravitee-inference-math-native.version>${gravitee-inference.version}</gravitee-inference-math-native.version>
+    <gravitee-inference.version>1.1.1</gravitee-inference.version>
     <properties-maven-plugin.version>1.1.0</properties-maven-plugin.version>
 
     <!-- Property used by the publication job in CI-->
@@ -76,7 +75,7 @@
     <dependency>
       <groupId>io.gravitee.inference.math.native</groupId>
       <artifactId>gravitee-inference-math-native</artifactId>
-      <version>${gravitee-inference-math-native.version}</version>
+      <version>${gravitee-inference.version}</version>
     </dependency>
 
     <dependency>
