--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
     <!-- Property used by the publication job in CI-->
     <publish-folder-path>plugins/services</publish-folder-path>
-    <gravitee-reactive-webclient-huggingface.version>1.0.0-MLAI-230-SNAPSHOT</gravitee-reactive-webclient-huggingface.version>
+    <gravitee-reactive-webclient-huggingface.version>1.1.0</gravitee-reactive-webclient-huggingface.version>
   </properties>
 
   <dependencyManagement>
