--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
         <maven.compiler.release>21</maven.compiler.release>
-        <gravitee-inference.version>1.4.0-feat-add-inference-formats-SNAPSHOT</gravitee-inference.version>
+        <gravitee-inference.version>1.5.0</gravitee-inference.version>
         <properties-maven-plugin.version>1.2.1</properties-maven-plugin.version>
 
         <!-- Property used by the publication job in CI-->
@@ -70,6 +70,12 @@
         <dependency>
             <groupId>io.gravitee.inference.onnx</groupId>
             <artifactId>gravitee-inference-onnx</artifactId>
+            <version>${gravitee-inference.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.inference.rest</groupId>
+            <artifactId>gravitee-inference-rest</artifactId>
             <version>${gravitee-inference.version}</version>
         </dependency>
 
