--- a/pom.xml
+++ b/pom.xml
@@ -201,8 +201,12 @@
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
             <artifactId>ollama</artifactId>
-            <version>1.21.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
